--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <li><a href="#css" class="group-nav-link">
                     <ion-icon name="logo-css3"></ion-icon>CSS
                 </a></li>
-            <li><a href="" class="group-nav-link">
+            <li><a href="#frameworks" class="group-nav-link">
                     <ion-icon name="code-slash-outline"></ion-icon>Frameworks - Libraries
                 </a></li>
             <li><a href="" class="group-nav-link">
@@ -1374,8 +1374,10 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/animista.png" alt="Animista"></div>
                             <h3>Animista</h3>
-                            <p>Animista is a place where you can play with a collection of ready to use CSS animations, tweak them and download only those you will actually use.</p>
-                            <a href="https://animista.net/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Animista is a place where you can play with a collection of ready to use CSS animations,
+                                tweak them and download only those you will actually use.</p>
+                            <a href="https://animista.net/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -1383,17 +1385,20 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/freefrontend.jpg" alt="Free Frontend"></div>
                             <h3>Free Frontend</h3>
-                            <p>Free hand-picked HTML, CSS and JavaScript (jQuery, React, Vue) code examples, tutorials and articles.</p>
-                            <a href="https://freefrontend.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Free hand-picked HTML, CSS and JavaScript (jQuery, React, Vue) code examples, tutorials
+                                and articles.</p>
+                            <a href="https://freefrontend.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/purecss.png" alt="PURE CSS"></div>
-                            <h3>PURE CSS</h3>
+                            <h3>Pure.css</h3>
                             <p>A set of small, responsive CSS modules that you can use in every web project.</p>
-                            <a href="https://purecss.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <a href="https://purecss.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -1402,7 +1407,8 @@
                                 <img src="/resources/icons/keyframes.png" alt="Keyframes.app"></div>
                             <h3>Keyframes.app</h3>
                             <p>Dead simple visual tools to help you generate CSS for your projects.</p>
-                            <a href="https://keyframes.app/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <a href="https://keyframes.app/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -1410,19 +1416,218 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/loadingio.png" alt="LOADING.IO"></div>
                             <h3>LOADING.IO</h3>
-                            <p>Service for making ajax loaders / loading gifs / preloaders and animated icons, live background, animated text in GIF / SVG / APNG / CSS.</p>
-                            <a href="https://loading.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Service for making ajax loaders / loading gifs / preloaders and animated icons, live
+                                background, animated text in GIF / SVG / APNG / CSS.</p>
+                            <a href="https://loading.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/cssvalues.jpg" alt=""></div>
+                                <img src="/resources/icons/cssvalues.png" alt=""></div>
                             <h3>CSS Values</h3>
                             <p>Web app to search the syntax and all possible values for any valid CSS property.</p>
-                            <a href="https://cssvalues.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <a href="https://cssvalues.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/normalizecss.png" alt="normalize.css"></div>
+                            <h3>Normalize.css</h3>
+                            <p>Normalize.css makes browsers render all elements more consistently and in line with modern standards. </p>
+                            <a href="" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/fancyborradius.jpg" alt="fancy-border-radius"></div>
+                            <h3>fancy-border-radius</h3>
+                            <p>A visual generator to build organic looking shapes with the help of CSS3 border-radius property.</p>
+                            <a href="https://9elements.github.io/fancy-border-radius/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/cssboxshadowgen.png" alt="brum.af shadow"></div>
+                            <h3>CSS Box Shadow Generator</h3>
+                            <p>Generate CSS3 Box Shadow code for your Div, Frame, Buttons or any other HTML element with Outline, and Inset (inner) type shadow effects</p>
+                            <a href="https://brumm.af/shadows" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        
+
+
+                    </article>
+                </section>
+
+                <section class="group group-frameworks" id="frameworks">
+
+                    <!-- ---- section-header ------ -->
+                    <header class="group-header">
+                        <ion-icon name="code-slash-outline"></ion-icon>
+                        <h2>Frameworks - Libraries</h2>
+                    </header>
+
+                    <!-- ---------- section-cards ------ -->
+                    <article class="group-cards">
+
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/reactjs.png" alt="React"></div>
+                            <h3>React</h3>
+                            <p>React is a JavaScript library from Facebook. It re-defined how front-end developers build
+                                the interactive user interfaces. Now a very mature library, it has a strong ecosystem of
+                                developers and packages.</p>
+                            <a href="https://reactjs.org/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/tailwindcss.png" alt="Tailwind CSS"></div>
+                            <h3>Tailwind CSS</h3>
+                            <p>Tailwind CSS is a highly customizable, low-level CSS framework that gives you all of the
+                                building blocks you need to build bespoke designs.</p>
+                            <a href="https://tailwindcss.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/vuejs.png" alt="Vue.js"></div>
+                            <h3>Vue.js</h3>
+                            <p>Vue.js is a very popular JavaScript framework. It offers a beautiful syntax and is a
+                                pleasure to work with. It has a strong ecosystem around it and so is a great choice on
+                                the front-end.</p>
+                            <a href="https://vuejs.org/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/nextjs.jpg" alt="Next.js"></div>
+                            <h3>Next.js</h3>
+                            <p>Next.js is a React framework that helps you build server-side rendered applications with
+                                zero configuration. There are lots of benefits to building Next applications, so it's
+                                well worth checking out.</p>
+                            <a href="https://nextjs.org/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/gatsby.png" alt="GatsbyJS"></div>
+                            <h3>GatsbyJS</h3>
+                            <p>Gatsby is a free and open-source framework based on React that helps developers build
+                                blazing-fast websites and apps</p>
+                            <a href="https://www.gatsbyjs.org/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/bootstrap.jpg" alt="Bootstrap"></div>
+                            <h3>Bootstrap</h3>
+                            <p>Bootstrap is the most well-known front-end component library. It's a very well-written
+                                tool, perfect for rapid prototyping or web development. </p>
+                            <a href="https://getbootstrap.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/foundation.jpg" alt="Foundation"></div>
+                            <h3>Foundation</h3>
+                            <p>Foundation is another well-written front-end framework. It's very simple to use and you
+                                can build complex interfaces in no time at all.</p>
+                            <a href="https://foundation.zurb.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/materialize.png" alt="Materialize"></div>
+                            <h3>Materialize</h3>
+                            <p>If you like Google's Material Design, then you'll love Materialize. It's a great library
+                                for quick development using Material Design principles.</p>
+                            <a href="https://materializecss.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/bulma.png" alt="Bulma"></div>
+                            <h3>Bulma</h3>
+                            <p>Bulma is a nice CSS framework based on Flexbox. It makes building mobile-first,
+                                responsive layouts is a breeze.</p>
+                            <a href="https://bulma.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/jquery.png" alt="jQuery"></div>
+                            <h3>jQuery</h3>
+                            <p>With the massive adoption of JS frameworks, the need for jQuery in new projects is
+                                dwindling. But, for new front-end developers and for building smaller sites, it is still
+                                very much worthwhile to learn.</p>
+                            <a href="https://jquery.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/reactnative.png" alt="React Native"></div>
+                            <h3>React Native</h3>
+                            <p>React Native allows developers to build out native mobile apps in JavaScript. It is a
+                                very powerful tool, especially for small teams building out their first apps.</p>
+                            <a href="https://facebook.github.io/react-native/" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/parsleyjs.png" alt="Parsley"></div>
+                            <h3>Parsley</h3>
+                            <p>Parsley allows you to add extremely simple client-side validations to your forms that are
+                                easily customizable</p>
+                            <a href="http://parsleyjs.org/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        
+                    </article>
+                </section>
+
+
+                <section class="group group-inspiration" id="inspiration">
+
+                    <!-- ---- section-header ------ -->
+                    <header class="group-header">
+                        <ion-icon name="bulb-outline"></ion-icon>
+                        <h2>Inspiration</h2>
+                    </header>
+
+                    <!-- ---------- section-cards ------ -->
+                    <article class="group-cards">
+
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
@@ -1436,12 +1641,7 @@
                     </article>
                 </section>
 
-
                 <!-- <section class="group group-" id=""></section>          
-                <section class="group group-" id=""></section>
-                <section class="group group-" id=""></section>
-                <section class="group group-" id=""></section>
-                <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
