--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li><a href="#frameworks" class="group-nav-link">
                     <ion-icon name="code-slash-outline"></ion-icon>Frameworks - Libraries
                 </a></li>
-            <li><a href="" class="group-nav-link">
+            <li><a href="#inspiration" class="group-nav-link">
                     <ion-icon name="bulb-outline"></ion-icon>Inspiration
                 </a></li>
             <li><a href="" class="group-nav-link">
@@ -1437,7 +1437,8 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/normalizecss.png" alt="normalize.css"></div>
                             <h3>Normalize.css</h3>
-                            <p>Normalize.css makes browsers render all elements more consistently and in line with modern standards. </p>
+                            <p>Normalize.css makes browsers render all elements more consistently and in line with
+                                modern standards. </p>
                             <a href="" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
                             </a>
                         </div>
@@ -1446,8 +1447,10 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/fancyborradius.jpg" alt="fancy-border-radius"></div>
                             <h3>fancy-border-radius</h3>
-                            <p>A visual generator to build organic looking shapes with the help of CSS3 border-radius property.</p>
-                            <a href="https://9elements.github.io/fancy-border-radius/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>A visual generator to build organic looking shapes with the help of CSS3 border-radius
+                                property.</p>
+                            <a href="https://9elements.github.io/fancy-border-radius/" class="visit-btn"
+                                target="blank">Visit<ion-icon name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -1455,11 +1458,13 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/cssboxshadowgen.png" alt="brum.af shadow"></div>
                             <h3>CSS Box Shadow Generator</h3>
-                            <p>Generate CSS3 Box Shadow code for your Div, Frame, Buttons or any other HTML element with Outline, and Inset (inner) type shadow effects</p>
-                            <a href="https://brumm.af/shadows" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Generate CSS3 Box Shadow code for your Div, Frame, Buttons or any other HTML element with
+                                Outline, and Inset (inner) type shadow effects</p>
+                            <a href="https://brumm.af/shadows" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
-                        
+
 
 
                     </article>
@@ -1612,7 +1617,7 @@
                                     name="open-outline"></ion-icon>
                             </a>
                         </div>
-                        
+
                     </article>
                 </section>
 
@@ -1628,6 +1633,92 @@
                     <!-- ---------- section-cards ------ -->
                     <article class="group-cards">
 
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/dribbble.png" alt="Dribbble"></div>
+                            <h3>Dribbble</h3>
+                            <p>The ultimate design inspiration resource, not just for web design. The show and tell for
+                                designers.</p>
+                            <a href="https://dribbble.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/landbook.jpg" alt="Land Book"></div>
+                            <h3>Land Book</h3>
+                            <p>Product landing page gallery. My #1 inspiration resource when I build a landing page.</p>
+                            <a href="http://land-book.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/onepagelove.png" alt="One Page Love"></div>
+                            <h3>One Page Love</h3>
+                            <p>The ultimate showcase of delicious One Page websites.</p>
+                            <a href="https://onepagelove.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/siteinspire.png" alt="Site Inspire"></div>
+                            <h3>Site Inspire</h3>
+                            <p>A showcase of the finest web and interactive design. Currently over 4900 websites.</p>
+                            <a href="http://www.siteinspire.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/calltoidea.png" alt="Call To idea"></div>
+                            <h3>Call To idea</h3>
+                            <p>Get quick inspiration for common website elements such as forms, sliders, navigations, etc.</p>
+                            <a href="http://www.calltoidea.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/mediaqueries.png" alt="Media Queries"></div>
+                            <h3>Media Queries</h3>
+                            <p>A collection of responsively designed websites for inspiration.</p>
+                            <a href="http://mediaqueri.es/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/awwwards.png" alt="Awwwards"></div>
+                            <h3>Awwwards</h3>
+                            <p>Awwwards has an incredible gallery of websites to look around. The sites on here are pushing the boundaries of what's possible on the web. So it's a great place to get ideas.</p>
+                            <a href="https://www.awwwards.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/glitch.jpg" alt="Glitch"></div>
+                            <h3>Glitch</h3>
+                            <p>Glitch is a friendly community that offers free tools to create and use apps. Their code editor allows for seamless collaboration on projects and can connect to the dev tools you already use.</p>
+                            <a href="https://glitch.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/pinterest.png" alt="Pinterest"></div>
+                            <h3>Pinterest</h3>
+                            <p>Pinterest can also serve as a Design Inspiration platform. There are many great design boards on Pinterest.</p>
+                            <a href="https://www.pinterest.com" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
