--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <ion-icon name="bulb-outline"></ion-icon>Inspiration
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="newspaper-outline"></ion-icon>Templtes
+                    <ion-icon name="newspaper-outline"></ion-icon>Templates
                 </a></li>
             <li><a href="" class="group-nav-link">
                     <ion-icon name="images-outline"></ion-icon>UI Graphics
@@ -1173,11 +1173,12 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/stackoverflow.png" alt="Stack Overflow"></div>
-                            <h3>Stack Overflow</h3>
-                            <p>Stack Overflow is the mecca for coding Q&A. It is the world's largest developer community
-                                and is an amazing resource for any developer.</p>
-                            <a href="https://stackoverflow.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                <img src="/resources/icons/hashnode.jpg" alt="Hashnode"></div>
+                            <h3>Hashnode</h3>
+                            <p>Hashnode is a free content creation platform and community that allows you to publish
+                                articles on your own domain and helps you stay connected with a growing developer
+                                community.</p>
+                            <a href="https://hashnode.com/community" class="visit-btn" target="blank">Visit<ion-icon
                                     name="open-outline"></ion-icon>
                             </a>
                         </div>
@@ -1270,6 +1271,17 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
+                                <img src="/resources/icons/stackoverflow.png" alt="Stack Overflow"></div>
+                            <h3>Stack Overflow</h3>
+                            <p>Stack Overflow is the mecca for coding Q&A. It is the world's largest developer community
+                                and is an amazing resource for any developer.</p>
+                            <a href="https://stackoverflow.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
                                 <img src="/resources/icons/tanirascia.jpg" alt="Tania Rascia"></div>
                             <h3>Tania Rascia's Blog</h3>
                             <p>Posts, tutorials, snippets, musings, and everything else. Useful</p>
@@ -1288,6 +1300,19 @@
                                     name="open-outline"></ion-icon>
                             </a>
                         </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/codeproject.png" alt="Code Project"></div>
+                            <h3>Code Project</h3>
+                            <p>Code Project is a community for computer programmers with articles on different topics
+                                and programming languages such as web development, software development, C++, Java, and
+                                other topics.</p>
+                            <a href="https://www.codeproject.com/?cat=23" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
 
 
                     </article>
@@ -1671,7 +1696,8 @@
                                 <img src="/resources/icons/siteinspire.png" alt="Site Inspire"></div>
                             <h3>Site Inspire</h3>
                             <p>A showcase of the finest web and interactive design. Currently over 4900 websites.</p>
-                            <a href="http://www.siteinspire.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <a href="http://www.siteinspire.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -1679,8 +1705,10 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/calltoidea.png" alt="Call To idea"></div>
                             <h3>Call To idea</h3>
-                            <p>Get quick inspiration for common website elements such as forms, sliders, navigations, etc.</p>
-                            <a href="http://www.calltoidea.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Get quick inspiration for common website elements such as forms, sliders, navigations,
+                                etc.</p>
+                            <a href="http://www.calltoidea.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -1689,7 +1717,8 @@
                                 <img src="/resources/icons/mediaqueries.png" alt="Media Queries"></div>
                             <h3>Media Queries</h3>
                             <p>A collection of responsively designed websites for inspiration.</p>
-                            <a href="http://mediaqueri.es/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <a href="http://mediaqueri.es/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -1697,8 +1726,11 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/awwwards.png" alt="Awwwards"></div>
                             <h3>Awwwards</h3>
-                            <p>Awwwards has an incredible gallery of websites to look around. The sites on here are pushing the boundaries of what's possible on the web. So it's a great place to get ideas.</p>
-                            <a href="https://www.awwwards.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Awwwards has an incredible gallery of websites to look around. The sites on here are
+                                pushing the boundaries of what's possible on the web. So it's a great place to get
+                                ideas.</p>
+                            <a href="https://www.awwwards.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -1706,8 +1738,11 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/glitch.jpg" alt="Glitch"></div>
                             <h3>Glitch</h3>
-                            <p>Glitch is a friendly community that offers free tools to create and use apps. Their code editor allows for seamless collaboration on projects and can connect to the dev tools you already use.</p>
-                            <a href="https://glitch.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Glitch is a friendly community that offers free tools to create and use apps. Their code
+                                editor allows for seamless collaboration on projects and can connect to the dev tools
+                                you already use.</p>
+                            <a href="https://glitch.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -1715,8 +1750,10 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/pinterest.png" alt="Pinterest"></div>
                             <h3>Pinterest</h3>
-                            <p>Pinterest can also serve as a Design Inspiration platform. There are many great design boards on Pinterest.</p>
-                            <a href="https://www.pinterest.com" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Pinterest can also serve as a Design Inspiration platform. There are many great design
+                                boards on Pinterest.</p>
+                            <a href="https://www.pinterest.com" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
